# l123

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
crates/l123/: Cargo.toml
crates/l123-cmd/: Cargo.toml
crates/l123-core/: Cargo.toml
crates/l123-core/src/: address.rs  alignment.rs  border.rs  cell_render.rs  color.rs  comment.rs  contents.rs  fill.rs  font_style.rs  format.rs  international.rs  label.rs  lib.rs  merge.rs  mode.rs  sheet_state.rs  table.rs  text_style.rs
crates/l123-engine/: Cargo.toml
crates/l123-engine/examples/: build_fixtures.rs
crates/l123-engine/src/: engine.rs  ironcalc_adapter.rs  lib.rs  num_fmt.rs
crates/l123-graph/: Cargo.toml
crates/l123-graph/examples/: dump_default_panel.rs  extract_icons.rs  gen_icon_data.rs
crates/l123-graph/src/: icon_data.rs  icon_rle.rs  icons.rs  lib.rs  raster.rs  render.rs
crates/l123-help/: Cargo.toml  build.rs
crates/l123-help/assets/help_html/: 0000-1-2-3-help-index.html  0001-task-index.html  0002-task-index-continued.html  0003-task-index-continued.html  0004-task-index-continued.html  0005-1-2-3-commands.html  0006-copy.html  0007-copy-continued.html  0008-the-data-commands.html  0009-the-file-commands.html  0010-the-graph-commands.html  0011-move.html  0012-the-print-commands.html  0013-quit.html  0014-the-range-commands.html  0015-system.html  0016-the-worksheet-commands.html  0017-file-admin.html  0018-file-admin-link-refresh.html  0019-file-admin-reservation.html  0020-file-admin-reservation-get-and-release.html  0021-file-admin-reservation-setting.html  0022-file-reservation.html  0023-file-open-yes-no-and-file-retrieve-yes-no.html  0024-file-admin-seal.html  0025-file-admin-seal-continued.html  0026-file-admin-table.html  0027-file-admin-table-continued.html  0028-file-combine.html  0029-file-combine-continued.html  0030-file-dir.html  0031-file-erase.html  0032-file-import.html  0033-file-import-continued.html  0034-text-file-definitions.html  0035-file-list.html  0036-file-new.html  0037-file-open.html  0038-file-open-continued.html  0039-file-retrieve.html  (+782 more)
crates/l123-help/examples/: dump_record.rs  dump_topics.rs  explore.rs  generate_topics_rs.rs  show_one.rs
crates/l123-help/src/: dict.rs  huffman.rs  lib.rs  parser.rs  renderer.rs
crates/l123-io/: Cargo.toml
crates/l123-io/src/: csv.rs  formula_sources.rs  lib.rs
crates/l123-macro/: Cargo.toml
crates/l123-macro/src/: lib.rs
crates/l123-menu/: Cargo.toml
crates/l123-menu/src/: lib.rs
crates/l123-parse/: Cargo.toml
crates/l123-parse/src/: lib.rs
crates/l123-print/: Cargo.toml
crates/l123-print/src/: grid.rs  lib.rs  render.rs  settings.rs  view.rs
crates/l123-print/src/encode/: ascii.rs  lp.rs  mod.rs  pdf.rs
crates/l123-ui/: Cargo.toml
crates/l123-ui/src/: app.rs  clock.rs  config.rs  help.rs  help_topics_decoded.rs  identity.rs  lib.rs  sysinfo.rs
crates/l123-ui/tests/: acceptance.rs
crates/l123/src/: main.rs
crates/wk3/: Cargo.toml
crates/wk3-cmd/: Cargo.toml
crates/wk3-cmd/src/: lib.rs
crates/wk3-core/: Cargo.toml
crates/wk3-core/src/: address.rs  contents.rs  format.rs  lib.rs  mode.rs  value.rs
crates/wk3-engine/: Cargo.toml
crates/wk3-engine/src/: engine.rs  ironcalc_adapter.rs
crates/wk3-io/: Cargo.toml
crates/wk3-io/src/: lib.rs
crates/wk3-macro/: Cargo.toml
crates/wk3-macro/src/: lib.rs
crates/wk3-menu/: Cargo.toml
crates/wk3-menu/src/: lib.rs
crates/wk3-parse/: Cargo.toml
crates/wk3-parse/src/: lib.rs
crates/wk3-ui/: Cargo.toml
crates/wk3-ui/src/: app.rs
crates/wk3-ui/tests/: acceptance.rs
crates/wk3/src/: main.rs
docs/: AT_FUNCTIONS.md  CONFIG.md  HLP_DECODE_NOTES.md  MENU.md  PLAN.md  SPEC.md  XLSX_IMPORT_PLAN.md
scripts/: release.sh
tests/acceptance/: M0_arrow_nav.tsv  M0_quit.tsv  M0_scroll_down.tsv  M0_scroll_right.tsv  M10_icon_hover.tsv  M10_label_spill.tsv  M10_mouse_click_cell.tsv  M10_mouse_click_point_extend.tsv  M10_mouse_click_splice.tsv  M10_mouse_drag_select.tsv  M10_mouse_scroll_wheel.tsv  M10_startup_splash.tsv  M10_status_line_filename.tsv  M10_status_line_sheet.tsv  M10_worksheet_status.tsv  M10_wysiwyg_alignment.tsv  M10_wysiwyg_bold.tsv  M10_wysiwyg_clear.tsv  M10_wysiwyg_col_width.tsv  M10_wysiwyg_color.tsv  M10_wysiwyg_compound.tsv  M10_wysiwyg_display_grid.tsv  M10_wysiwyg_display_mode.tsv  M10_wysiwyg_panel_marker.tsv  M10_wysiwyg_undo.tsv  M10_wysiwyg_xlsx_round_trip.tsv  M10_xlsx_format_round_trip.tsv  M1_commit_on_arrow.tsv  M1_edit_f2.tsv  M1_entry_cancel.tsv  M1_label_entry.tsv  M1_label_prefixes.tsv  M1_value_entry.tsv  M2_f9_calc.tsv  M2_format_tag.tsv  M2_formula_entry.tsv  M3_beep_edge.tsv  M3_copy.tsv  M3_insert_delete_row_col.tsv  M3_menu_navigation.tsv  (+175 more)
tests/acceptance/fixtures/: m4_import.csv
tests/acceptance/fixtures/wk3/: FILE0001.WK3
tests/acceptance/fixtures/xlsx/: README.md  alignment.xlsx  auto_contrast.xlsx  borders.xlsx  comments.xlsx  fill.xlsx  font.xlsx  frozen.xlsx  hidden_sheets.xlsx  merges.xlsx  sheet_color.xlsx  tables.xlsx
tests/help_groundtruth/: 01_ready_help.txt  02_about.txt  03_function_keys.txt  04_about-help.txt  05_add-ins.txt  06_background-printing.txt  07_cell-references.txt  08_control-panel.txt  09_data-entry.txt  10_data-protection.txt  11_error-messages.txt  12_file-linking.txt  13_formulas.txt  14_function-index.txt  15_function-keys.txt  16_keyboard-index.txt  17_macro-basics.txt  18_macro-commands.txt  19_macro-keys.txt  20_mode-indicators.txt  21_printer-info.txt  22_range-basics.txt  23_recalculation.txt  24_record-feature.txt  25_status-indicators.txt  26_task-index.txt  27_undo-feature.txt  28_wysiwyg.txt  29_commands.txt  30_copy.txt  31_data.txt  32_file.txt  33_graph.txt  34_move.txt  35_print.txt  36_quit.txt  37_range.txt  38_system.txt  39_worksheet.txt  40_about-help_p2.txt  (+13 more)
