[workspace]
resolver = "2"
members = [
    "crates/l123-core",
    "crates/l123-engine",
    "crates/l123-parse",
    "crates/l123-cmd",
    "crates/l123-menu",
    "crates/l123-ui",
    "crates/l123-io",
    "crates/l123-macro",
    "crates/l123",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ddmoore/l123"
rust-version = "1.80"

[workspace.dependencies]
# internal
l123-core   = { path = "crates/l123-core" }
l123-engine = { path = "crates/l123-engine" }
l123-parse  = { path = "crates/l123-parse" }
l123-cmd    = { path = "crates/l123-cmd" }
l123-menu   = { path = "crates/l123-menu" }
l123-ui     = { path = "crates/l123-ui" }
l123-io     = { path = "crates/l123-io" }
l123-macro  = { path = "crates/l123-macro" }

# external
ironcalc       = "0.7"
ironcalc_base  = "0.7"
ratatui        = "0.29"
crossterm      = "0.28"
thiserror      = "2"
anyhow         = "1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
