[workspace]
resolver = "2"
members = [
    "crates/l123-core",
    "crates/l123-engine",
    "crates/l123-parse",
    "crates/l123-cmd",
    "crates/l123-menu",
    "crates/l123-ui",
    "crates/l123-io",
    "crates/l123-macro",
    "crates/l123-graph",
    "crates/l123-print",
    "crates/l123",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/duane1024/l123"
rust-version = "1.95"

[workspace.dependencies]
# internal
l123-core   = { path = "crates/l123-core" }
l123-engine = { path = "crates/l123-engine" }
l123-parse  = { path = "crates/l123-parse" }
l123-cmd    = { path = "crates/l123-cmd" }
l123-menu   = { path = "crates/l123-menu" }
l123-ui     = { path = "crates/l123-ui" }
l123-io     = { path = "crates/l123-io" }
l123-macro  = { path = "crates/l123-macro" }
l123-graph  = { path = "crates/l123-graph" }
l123-print  = { path = "crates/l123-print" }

# external
ironcalc_xlsx  = { package = "ironcalc", path = "../IronCalc/xlsx" }
ironcalc_base  = { path = "../IronCalc/base" }
ironcalc_lotus = { path = "../IronCalc/lotus" }
ratatui        = "0.30"
crossterm      = "0.28"
thiserror      = "2"
anyhow         = "1"
plotters       = { version = "0.3", default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "line_series", "point_series", "histogram", "full_palette", "ttf"] }
image          = { version = "0.25", default-features = false, features = ["png"] }
ratatui-image  = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
libc           = "0.2"
pdf-writer     = "0.14"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
