[workspace]
resolver = "2"
members = [
    "crates/l123-core",
    "crates/l123-engine",
    "crates/l123-parse",
    "crates/l123-cmd",
    "crates/l123-menu",
    "crates/l123-ui",
    "crates/l123-io",
    "crates/l123-macro",
    "crates/l123-graph",
    "crates/l123-help",
    "crates/l123-print",
    "crates/l123",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/duane1024/l123"
rust-version = "1.95"

[workspace.dependencies]
# internal
l123-core   = { path = "crates/l123-core" }
l123-engine = { path = "crates/l123-engine" }
l123-parse  = { path = "crates/l123-parse" }
l123-cmd    = { path = "crates/l123-cmd" }
l123-menu   = { path = "crates/l123-menu" }
l123-ui     = { path = "crates/l123-ui" }
l123-io     = { path = "crates/l123-io" }
l123-macro  = { path = "crates/l123-macro" }
l123-graph  = { path = "crates/l123-graph" }
l123-help   = { path = "crates/l123-help" }
l123-print  = { path = "crates/l123-print" }

# external
# Default: published crates from crates.io. For local IronCalc-fork
# iteration, uncomment the [patch.crates-io] block at the bottom of
# this file.
ironcalc_xlsx  = { package = "ironcalc", version = "0.7" }
ironcalc_base  = { package = "ironcalc_base", version = "0.7" }
# `ironcalc_lotus` is not on crates.io; it is pulled in directly by
# `l123-engine` under the `wk3` feature only. See that crate's
# Cargo.toml.
ratatui        = "0.30"
crossterm      = "0.28"
thiserror      = "2"
anyhow         = "1"
plotters       = { version = "0.3", default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "line_series", "point_series", "histogram", "full_palette", "ttf"] }
image          = { version = "0.25", default-features = false, features = ["png"] }
ratatui-image  = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
libc           = "0.2"
pdf-writer     = "0.14"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "thin"
codegen-units = 1

# ---------------------------------------------------------------
# Local IronCalc fork (developer override) — KEEP COMMENTED on the
# committed branch.
#
# Uncomment to redirect the `ironcalc` and `ironcalc_base` deps to a
# sibling checkout at `../IronCalc`. Required if you build with
# `--features wk3` and want all three IronCalc crates to come from
# the same source tree (the `wk3` feature already pulls
# `ironcalc_lotus` from `../IronCalc/lotus`).
#
# [patch.crates-io]
# ironcalc      = { path = "../IronCalc/xlsx" }
# ironcalc_base = { path = "../IronCalc/base" }
