[package]
name = "l123-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Lotus 1-2-3 R3 (.WK3) read support.
#
# `ironcalc_lotus` is NOT on crates.io and NOT in the upstream
# https://github.com/ironcalc/ironcalc repository — it currently
# lives only in a local IronCalc fork at `../../../IronCalc/lotus`
# (i.e. a sibling checkout of this repo's parent dir).
#
# To enable WK3 read support:
#   1. Clone the IronCalc fork that ships the `lotus` crate so that
#      `../IronCalc/lotus` exists alongside this repo.
#   2. Uncomment the `ironcalc_lotus` line in [dependencies] below.
#   3. Build with `--features wk3` (or `--features l123/wk3` when
#      building the binary).
#
# Default-off keeps plain `cargo build` working with no IronCalc
# clone on disk.
wk3 = []

[dependencies]
l123-core = { workspace = true }
ironcalc_xlsx = { workspace = true }
# Uncomment the next line together with `--features wk3` (see [features] above):
# ironcalc_lotus = { path = "../../../IronCalc/lotus" }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# `zip` is used by the `build_fixtures` example to hand-patch xlsx
# files with features IronCalc's exporter doesn't emit (e.g. sheet
# tabColor — see docs/XLSX_IMPORT_PLAN.md §2.6 notes on upstream gap).
# Version pinned to match IronCalc's transitive `zip` so we aren't
# compiling two versions.
zip = "0.6"
