[package]
name = "l123-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
l123-core = { workspace = true }
l123-engine = { workspace = true }
l123-menu = { workspace = true }
l123-parse = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
