[package]
name = "l123-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# See `l123-engine/Cargo.toml` for what this enables and the
# additional manual step it requires.
wk3 = ["l123-engine/wk3"]

[dependencies]
l123-core = { workspace = true }
l123-engine = { workspace = true }
l123-menu = { workspace = true }
l123-parse = { workspace = true }
l123-io = { workspace = true }
l123-graph = { workspace = true }
l123-help = { workspace = true }
l123-print = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
ratatui-image = { workspace = true }
image = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
