[package]
name = "l123"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "l123"
path = "src/main.rs"

[features]
# See `l123-engine/Cargo.toml` for what this enables and the
# additional manual step it requires.
wk3 = ["l123-ui/wk3", "l123-engine/wk3"]

[dependencies]
l123-core = { workspace = true }
l123-engine = { workspace = true }
l123-cmd = { workspace = true }
l123-menu = { workspace = true }
l123-ui = { workspace = true }
l123-io = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
